# research-agent

./: app.py  main.py  pyproject.toml  simple_agent.py  task.md
src/: __init__.py  agent.py  schema.py  tool.py
